--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,39 @@
-# phpstorm project files
-.idea
+# See http://help.github.com/ignore-files/ for more about ignoring files.
 
-# netbeans project files
-nbproject
+# compiled output
+/dist
+/tmp
+/out-tsc
 
-# zend studio for eclipse project files
-.buildpath
+# dependencies
+/node_modules
+
+# IDEs and editors
+/.idea
 .project
-.settings
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
 
-# windows thumbnail cache
-Thumbs.db
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
 
-# composer vendor dir
-/vendor
+# misc
+/.sass-cache
+/connect.lock
+/coverage
+/libpeerconnection.log
+npm-debug.log
+yarn-error.log
+testem.log
+/typings
 
-/composer.lock
-
-# composer itself is not needed
-composer.phar
-
-# Mac DS_Store Files
+# System Files
 .DS_Store
-
-# phpunit itself is not needed
-phpunit.phar
-# local phpunit config
-/phpunit.xml
-# phpunit cache
-.phpunit.result.cache
-
-# Phan
-analysis.txt
-
+Thumbs.db
