--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~10.0.11",
     "@angular/platform-browser-dynamic": "~10.0.11",
     "@angular/router": "~10.0.11",
+    "core-js": "^3.6.5",
     "rxjs": "~6.6.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.10.3"
