--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular/language-service": "~11.0.7",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
+    "codelyzer": "^6.0.0",
     "@types/node": "~8.9.4",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
