--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@angular/platform-browser-dynamic": "~11.0.7",
     "@angular/router": "~11.0.7",
     "core-js": "^3.6.5",
-    "rxjs": "~6.6.2",
+    "rxjs": "^6.6.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
