--- a/package.json
+++ b/package.json
@@ -8,28 +8,28 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "ci:build": "ng build --prod"
+    "ci:build": "ng build --configuration production"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.0.7",
-    "@angular/common": "~11.0.7",
-    "@angular/compiler": "~11.0.7",
-    "@angular/core": "~11.0.7",
-    "@angular/forms": "~11.0.7",
-    "@angular/platform-browser": "~11.0.7",
-    "@angular/platform-browser-dynamic": "~11.0.7",
-    "@angular/router": "~11.0.7",
+    "@angular/animations": "~12.2.17",
+    "@angular/common": "~12.2.17",
+    "@angular/compiler": "~12.2.17",
+    "@angular/core": "~12.2.17",
+    "@angular/forms": "~12.2.17",
+    "@angular/platform-browser": "~12.2.17",
+    "@angular/platform-browser-dynamic": "~12.2.17",
+    "@angular/router": "~12.2.17",
     "core-js": "^3.6.5",
     "rxjs": "^6.6.3",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.6",
-    "@angular/cli": "~11.0.6",
-    "@angular/compiler-cli": "~11.0.7",
-    "@angular/language-service": "~11.0.7",
+    "@angular-devkit/build-angular": "~12.2.18",
+    "@angular/cli": "~12.2.18",
+    "@angular/compiler-cli": "~12.2.17",
+    "@angular/language-service": "~12.2.17",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -44,6 +44,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~6.1.3",
-    "typescript": "~4.0.5"
+    "typescript": "~4.3.5"
   }
 }
