--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,44 +1,47 @@
 on:
-    - pull_request
-    - push
+  - pull_request
+  - push
 
 name: build yii-debug-frontend
 
 jobs:
-    tests:
-        name: Node ${{ matrix.node-version }}-${{ matrix.os }}
-        runs-on: ${{ matrix.os }}
+  tests:
+    name: Node ${{ matrix.node-version }}-${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
 
-        strategy:
-          matrix:
-            os:
-                - ubuntu-latest
+    strategy:
+      matrix:
+        os:
+          - ubuntu-latest
 
-            node-version:
-                - 12.x
+        node-version:
+          - 14.20.x
+          - 16.13.x
+          - 18.10.x
+          - lts
 
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v2
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
 
-            - name: Cache node modules
-              uses: actions/cache@v2
-              with:
-                path: ~/.npm
-                key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-                restore-keys: |
-                    ${{ runner.os }}-node-
+      - name: Cache node modules
+        uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
 
-            - name: Use Node.js ${{ matrix.node-version }}
-              uses: actions/setup-node@v2
-              with:
-                node-version: ${{ matrix.node-version }}
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
 
-            - name: Install Dependencies
-              run: npm ci
+      - name: Install Dependencies
+        run: npm ci
 
-            - name: Run lint
-              run: npm run lint
+      - name: Run lint
+        run: npm run lint
 
-            - name: Build Application
-              run: npm run ci:build
+      - name: Build Application
+        run: npm run ci:build
