--- a/package.json
+++ b/package.json
@@ -1,49 +1,40 @@
 {
-  "name": "yii-gii-frontend",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
-    "ci:build": "ng build --configuration production"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^15.1.0",
-    "@angular/common": "^15.1.0",
-    "@angular/compiler": "^15.1.0",
-    "@angular/core": "^15.1.0",
-    "@angular/forms": "^15.1.0",
-    "@angular/platform-browser": "^15.1.0",
-    "@angular/platform-browser-dynamic": "^15.1.0",
-    "@angular/router": "^15.1.0",
-    "core-js": "^3.6.5",
-    "rxjs": "^6.6.3",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.4"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^15.1.1",
-    "@angular/cli": "^15.1.1",
-    "@angular/compiler-cli": "^15.1.0",
-    "@angular/language-service": "^15.1.0",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.16",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~6.1.3",
-    "typescript": "~4.9.4"
-  }
+    "name": "yii-gii-frontend",
+    "version": "0.0.0",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve",
+        "build": "ng build",
+        "test": "ng test",
+        "lint": "ng lint",
+        "e2e": "ng e2e",
+        "ci:build": "ng build --configuration production"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "^15.1.0",
+        "@angular/common": "^15.1.0",
+        "@angular/compiler": "^15.1.0",
+        "@angular/core": "^15.1.0",
+        "@angular/forms": "^15.1.0",
+        "@angular/platform-browser": "^15.1.0",
+        "@angular/platform-browser-dynamic": "^15.1.0",
+        "@angular/router": "^15.1.0",
+        "rxjs": "~7.8.0",
+        "tslib": "^2.3.0",
+        "zone.js": "~0.12.0"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "^15.1.1",
+        "@angular/cli": "~15.1.1",
+        "@angular/compiler-cli": "^15.1.0",
+        "@types/jasmine": "~4.3.0",
+        "jasmine-core": "~4.5.0",
+        "karma": "~6.4.0",
+        "karma-chrome-launcher": "~3.1.0",
+        "karma-coverage": "~2.2.0",
+        "karma-jasmine": "~5.1.0",
+        "karma-jasmine-html-reporter": "~2.0.0",
+        "typescript": "~4.9.4"
+    }
 }
