--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,9 +11,7 @@ jobs:
 
     strategy:
       matrix:
-        os:
-          - ubuntu-latest
-
+        os: [ubuntu-latest]
         node: [14, 16, 18]
 
     steps:
