--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,8 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         node: [14, 16, 18]
+      fail-fast: false
+      max-parallel: 3
 
     steps:
       - name: Checkout
